--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
     <body>
         <header id="header">
             <div class="header-main-inner">
-                <div
-                    class="header-topbar py-3"
-                    style="background-color: #84bdbe"
-                >
+                <div class="header-topbar py-3">
                     <div class="header-container">
                         Join our showroom and get 20 % off ! Coupon code :
                         Lebe20
@@ -38,7 +35,7 @@
                     <div class="container-fluid sticky-wrapper">
                         <div class="row d-flex align-items-center">
                             <div class="col-3">
-                                <div class="search-box">
+                                <div class="header-search-box">
                                     <form action="" class="search-form">
                                         <div class="search-fields">
                                             <span
@@ -67,26 +64,26 @@
                                         <li class="nav-item">
                                             <a href="">Home</a>
                                         </li>
-                                        <li class="menu-item">
+                                        <li class="nav-item">
                                             <a href="">Shop</a>
                                         </li>
-                                        <li class="menu-item">
+                                        <li class="nav-item">
                                             <a href="">Element</a>
                                         </li>
-                                        <li class="menu-item">
+                                        <li class="nav-item">
                                             <a href=""
                                                 ><img
                                                     src="images/logo.png"
                                                     alt=""
                                             /></a>
                                         </li>
-                                        <li class="menu-item">
+                                        <li class="nav-item">
                                             <a href="">Page</a>
                                         </li>
-                                        <li class="menu-item">
+                                        <li class="nav-item">
                                             <a href="">Blog</a>
                                         </li>
-                                        <li class="menu-item">
+                                        <li class="nav-item">
                                             <a href="">Megamenu</a>
                                         </li>
                                     </ul>
@@ -94,11 +91,19 @@
                             </div>
 
                             <div class="col-3">
-                                <div class="header-control-wrap">
-                                    <div class="currency-language-wrap">
+                                <div
+                                    class="header-control-wrap d-flex justify-content-end"
+                                >
+                                    <div
+                                        class="currency-language-wrap d-inline-block"
+                                    >
                                         <ul class="nav currency-language">
                                             <li class="nav-item">
-                                                <a role="button" href="">
+                                                <a
+                                                    role="button"
+                                                    href=""
+                                                    class="currency"
+                                                >
                                                     <img
                                                         src="images/united-states.png"
                                                         alt=""
@@ -107,7 +112,7 @@
                                                         class="fas fa-angle-down"
                                                     ></i>
                                                 </a>
-                                                <ul class="nav submenu">
+                                                <!-- <ul class="nav submenu">
                                                     <li class="nav-item">
                                                         <a href="">
                                                             <img
@@ -121,12 +126,12 @@
                                                             >
                                                         </a>
                                                     </li>
-                                                </ul>
+                                                </ul> -->
                                             </li>
                                         </ul>
                                     </div>
 
-                                    <div class="block-account">
+                                    <div class="block-account d-inline-block">
                                         <a href="" class="popup">
                                             <span
                                                 class="flaticon-profile"
@@ -134,7 +139,7 @@
                                         </a>
                                     </div>
 
-                                    <div class="lebe-minicart">
+                                    <div class="lebe-minicart d-inline-block">
                                         <span class="flaticon-bag"></span>
                                         <span class="minicart-number">0</span>
                                     </div>
