--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <body>
         <header id="header">
             <div class="header-main-inner">
-                <div class="header-topbar py-3">
+                <!-- <div class="header-topbar py-3">
                     <div class="header-container">
                         Join our showroom and get 20 % off ! Coupon code :
                         Lebe20
                         <span class="flaticon-close"></span>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="header-wrap-stick">
                     <div class="container-fluid sticky-wrapper">
@@ -151,14 +151,12 @@
             </div>
 
             <div class="header-breadcrumb">
-                <div class="content-banner">
-                    <div class="container">
-                        <h1 class="title-page">Shop</h1>
-                        <nav class="commerce-breadcrumb">
-                            <a href="">Home</a>
-                            &nbsp;/&nbsp;Shop
-                        </nav>
-                    </div>
+                <div class="container content-banner">
+                    <h1 class="title-page">Shop</h1>
+                    <nav class="commerce-breadcrumb">
+                        <a href="">Home</a>
+                        &nbsp;/&nbsp;Shop
+                    </nav>
                 </div>
             </div>
         </header>
@@ -496,57 +494,6 @@
                             </div>
 
                             <div class="part-wrap part-action-right-wrap">
-                                <div class="products-sizes">
-                                    <a
-                                        href="#"
-                                        data-products_num="5"
-                                        class="products-size size-5"
-                                    >
-                                        <svg
-                                            viewBox="0 0 16 16"
-                                            id="view-size-5"
-                                            width="1.8rem"
-                                            height="1.8rem"
-                                        >
-                                            <path
-                                                d="M4.769 3.385c0 .762-.623 1.385-1.385 1.385S2 4.146 2 3.385 2.623 2 3.385 2s1.384.623 1.384 1.385zM9.385 3.385c0 .762-.623 1.385-1.385 1.385s-1.385-.624-1.385-1.385S7.238 2 8 2s1.385.623 1.385 1.385zM4.769 8c0 .762-.623 1.385-1.385 1.385S2 8.762 2 8s.623-1.385 1.385-1.385S4.769 7.238 4.769 8zM9.385 8c0 .762-.623 1.385-1.385 1.385S6.615 8.762 6.615 8 7.238 6.615 8 6.615 9.385 7.238 9.385 8zM4.769 12.615c0 .762-.623 1.385-1.384 1.385S2 13.377 2 12.615s.623-1.385 1.385-1.385 1.384.624 1.384 1.385zM9.385 12.615C9.385 13.377 8.762 14 8 14s-1.385-.623-1.385-1.385.623-1.384 1.385-1.384 1.385.623 1.385 1.384zM14 3.385c0 .762-.623 1.385-1.385 1.385s-1.385-.623-1.385-1.385S11.854 2 12.615 2C13.377 2 14 2.623 14 3.385zM14 8c0 .762-.623 1.385-1.385 1.385S11.231 8.762 11.231 8s.623-1.385 1.385-1.385C13.377 6.615 14 7.238 14 8zM14 12.615c0 .762-.623 1.385-1.385 1.385s-1.385-.623-1.385-1.385.623-1.385 1.385-1.385A1.39 1.39 0 0 1 14 12.615z"
-                                            ></path>
-                                        </svg>
-                                    </a>
-                                    <a
-                                        href="#"
-                                        data-products_num="4"
-                                        class="products-size size-4"
-                                    >
-                                        <svg
-                                            viewBox="0 0 16 16"
-                                            id="view-size-4"
-                                            width="1.8rem"
-                                            height="1.8rem"
-                                        >
-                                            <path
-                                                d="M7 4.5C7 5.875 5.875 7 4.5 7S2 5.875 2 4.5 3.125 2 4.5 2 7 3.125 7 4.5zM14 4.5C14 5.875 12.875 7 11.5 7S9 5.875 9 4.5 10.125 2 11.5 2 14 3.125 14 4.5zM7 11.5C7 12.875 5.875 14 4.5 14S2 12.875 2 11.5 3.125 9 4.5 9 7 10.125 7 11.5zM14 11.5c0 1.375-1.125 2.5-2.5 2.5S9 12.875 9 11.5 10.125 9 11.5 9s2.5 1.125 2.5 2.5z"
-                                            ></path>
-                                        </svg>
-                                    </a>
-                                    <a
-                                        href="#"
-                                        data-products_num="3"
-                                        class="products-size active"
-                                    >
-                                        <svg
-                                            viewBox="0 0 16 16"
-                                            id="view-size-3"
-                                            width="1.8rem"
-                                            height="1.8rem"
-                                        >
-                                            <path
-                                                d="M14 8c0 3.3-2.7 6-6 6s-6-2.7-6-6 2.7-6 6-6 6 2.7 6 6z"
-                                            ></path>
-                                        </svg>
-                                    </a>
-                                </div>
-
                                 <form action="" class="commerce-ordering">
                                     <select name="orderby" class="orderby">
                                         <option value="popularity">
@@ -567,6 +514,59 @@
                                         </option>
                                     </select>
                                 </form>
+
+                                <div class="products-sizes">
+                                    <a
+                                        href="#"
+                                        data-products_num="5"
+                                        class="products-size size-5"
+                                    >
+                                        <svg
+                                            viewBox="0 0 16 16"
+                                            id="view-size-5"
+                                            width="1.8rem"
+                                            height="1.8rem"
+                                        >
+                                            <path
+                                                d="M4.769 3.385c0 .762-.623 1.385-1.385 1.385S2 4.146 2 3.385 2.623 2 3.385 2s1.384.623 1.384 1.385zM9.385 3.385c0 .762-.623 1.385-1.385 1.385s-1.385-.624-1.385-1.385S7.238 2 8 2s1.385.623 1.385 1.385zM4.769 8c0 .762-.623 1.385-1.385 1.385S2 8.762 2 8s.623-1.385 1.385-1.385S4.769 7.238 4.769 8zM9.385 8c0 .762-.623 1.385-1.385 1.385S6.615 8.762 6.615 8 7.238 6.615 8 6.615 9.385 7.238 9.385 8zM4.769 12.615c0 .762-.623 1.385-1.384 1.385S2 13.377 2 12.615s.623-1.385 1.385-1.385 1.384.624 1.384 1.385zM9.385 12.615C9.385 13.377 8.762 14 8 14s-1.385-.623-1.385-1.385.623-1.384 1.385-1.384 1.385.623 1.385 1.384zM14 3.385c0 .762-.623 1.385-1.385 1.385s-1.385-.623-1.385-1.385S11.854 2 12.615 2C13.377 2 14 2.623 14 3.385zM14 8c0 .762-.623 1.385-1.385 1.385S11.231 8.762 11.231 8s.623-1.385 1.385-1.385C13.377 6.615 14 7.238 14 8zM14 12.615c0 .762-.623 1.385-1.385 1.385s-1.385-.623-1.385-1.385.623-1.385 1.385-1.385A1.39 1.39 0 0 1 14 12.615z"
+                                            ></path>
+                                        </svg>
+                                    </a>
+
+                                    <a
+                                        href="#"
+                                        data-products_num="4"
+                                        class="products-size size-4"
+                                    >
+                                        <svg
+                                            viewBox="0 0 16 16"
+                                            id="view-size-4"
+                                            width="1.8rem"
+                                            height="1.8rem"
+                                        >
+                                            <path
+                                                d="M7 4.5C7 5.875 5.875 7 4.5 7S2 5.875 2 4.5 3.125 2 4.5 2 7 3.125 7 4.5zM14 4.5C14 5.875 12.875 7 11.5 7S9 5.875 9 4.5 10.125 2 11.5 2 14 3.125 14 4.5zM7 11.5C7 12.875 5.875 14 4.5 14S2 12.875 2 11.5 3.125 9 4.5 9 7 10.125 7 11.5zM14 11.5c0 1.375-1.125 2.5-2.5 2.5S9 12.875 9 11.5 10.125 9 11.5 9s2.5 1.125 2.5 2.5z"
+                                            ></path>
+                                        </svg>
+                                    </a>
+
+                                    <a
+                                        href="#"
+                                        data-products_num="3"
+                                        class="products-size active"
+                                    >
+                                        <svg
+                                            viewBox="0 0 16 16"
+                                            id="view-size-3"
+                                            width="1.8rem"
+                                            height="1.8rem"
+                                        >
+                                            <path
+                                                d="M14 8c0 3.3-2.7 6-6 6s-6-2.7-6-6 2.7-6 6-6 6 2.7 6 6z"
+                                            ></path>
+                                        </svg>
+                                    </a>
+                                </div>
                             </div>
                         </div>
 
@@ -808,7 +808,7 @@
                                       <span aria-hidden="true">&laquo;</span>
                                     </a>
                                   </li> -->
-                                    <li class="page-item">
+                                    <li class="page-item active">
                                         <a class="page-link" href="#">1</a>
                                     </li>
                                     <li class="page-item">
@@ -860,13 +860,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4 px-4 py-5">
+
+                        <div class="col-4 px-4 py-5 footer-logo">
                             <div class="row d-flex justify-content-center">
                                 <img src="images/MINIMAL-SHOP.png" alt="" />
                             </div>
                         </div>
+
                         <div class="col-4 px-4 py-5">
-                            <div class="row newsletter-inner">
+                            <div class="row newsletter-inner d-flex justify-content-center align-items-center">
                                 <div class="newsletter-top">
                                     <h3 class="newsletter-title">
                                         Don't miss out on the latest.
@@ -893,6 +895,7 @@
                     </div>
                 </div>
             </div>
+            
             <div class="footer-sub">
                 <div class="container-fluid">
                     <div class="row">
