--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="footer-sub">
                 <div class="container-fluid">
                     <div class="row">
@@ -915,10 +915,10 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-4">
-                            <div>© 2021 Famithemes. All rights reserved</div>
+                        <div class="col-4 d-flex justify-content-center align-items-center">
+                            <div class="copyright">© 2021 Famithemes. All rights reserved</div>
                         </div>
-                        <div class="col-4 payment-img-wrap">
+                        <div class="col-4 payment-img-wrap d-flex justify-content-end align-items-center">
                             <div class="payment-img">
                                 <img src="images/payment-img.png" alt="" />
                             </div>
